--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <style>
+body{
+    background: azure;
+}
         
 .input{
     width: 70%;
@@ -27,16 +30,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat</title>
 </head>
+<header style="background: aqua; height: 150px; margin-bottom: 50px;"></header>
 <body style="text-align: center;">
-    <img src="live-chat-apps-1280x720.jpg" style="width: 50%;" class="col-lg-6">
     <center>
-    <div class="form col-lg-6" style="box-shadow: 1px 1px 3px rgba(0,0,0,0.4); width: 50%; position: relative; top: 300px; left: 150px; width: 400px; height: 200px; background-color: lightblue" id="log">
+    <div style="box-shadow: 1px 1px 3px rgba(0,0,0,0.4); width: 50%;text-align: center; width: 400px; height: 200px;  margin-top: 0% auto; background: linear-gradient(#0ae1f0 0%, #210af0 100%)" id="log">
         <form>
         <input type="text" class="input" id="username" placeholder="Username">
-        <button class="btn btn-info" style="outline: none;">Login</button>
+        <button class="btn btn-info" style="outline: none;" onclick="login()">Login</button>
         </form>
     </div>
     </center>
     <script src="main.js"></script>
 </body>
+<footer style="background: blue; height: 200px; position: relative; bottom: -155px;"></footer>
 </html>
